# solace-public-workflows

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
common/: README.md  ci_payload.py  github_reporting.py
docs/: container-scan-config-architecture.md  workflow-config-schema.md
generate-github-changelog/: action.yaml
generate-github-release-notes/: .versionrc.example.json  Dockerfile  Makefile  PERMISSIONS.md  README.md  RELEASE_NOTES-Issues.md  action.yaml  generate-github-release-notes.py  pyproject.toml
generate-github-release-notes/tests/: requirements.txt  run_tests.py  test_generate_release_notes.py  test_simple.py
guardian-db-sync/: README.md  action.yml  db_sync_via_api.sh
guardian-dp-sync/: README.md  action.yml  db_sync_via_api.sh
guardian-release-gate/: README.md  action.yml  release_gate_via_api.sh
guardian-upload-sync/: README.md  action.yml  upload_and_db_sync_via_api.sh
guardian-vulnerability-diff/: README.md  action.yml  vulnerability_diff_via_api.sh
guardian-vulnerability-gate/: README.md  action.yml  render_step_summary.py  run_vulnerability_gate_via_api.sh
monorepo-ci-report-status/: README.md  action.yml
monorepo-fossa-diff-report/: README.md
monorepo-project-ci-report/: README.md  action.yml
pr-release-readiness-check/: README.md
prisma-cloud-scan/: README.md  action.yml
sca-setup/: design.md
sca-setup-deps/: README.md  action.yml
workflow-config-loader/: README.md  action.yaml  workflow-config-schema.md
workflow-dispatch-and-wait/: README.md  action.yml
(+99 files in other folders)
