[project]
name = "generate-github-release-notes"
version = "1.0.0"
description = "Generate formatted release notes from GitHub commits"
requires-python = ">=3.11"
dependencies = [
    "gql[requests]>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "PyYAML>=6.0",
]
